changed index page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My Personal Website</h1>
+    <h1>Hello World!</h1>
+    
+    <p>My name is Kavin and blah.</p>
 </body>
 </html>
