--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello World!</h1>
     
-    <p>My name is Kavin and blah.</p>
+    <p>My name is Kavin and I am 15 years old. I am a rising sophomore at Enloe High School.</p>
 </body>
 </html>
