--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kavin Kumanan</title>
+    <title>Kavin Kumanan - Projects</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-
 <body>
     <div class="header">
         <div class="nav">
@@ -22,13 +20,5 @@
             </nav>
         </div>
     </div>
-    <div class="intro">
-        <h1>Hello World!</h1>
-        <p>My name is Kavin and I am 15 years old. I am a rising sophomore at Enloe High School.</p>
-    </div>
-    <div class="mainbody">
-        
-    </div>
 </body>
-
 </html>
