--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kavin Kumanan</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -22,12 +23,9 @@
             </nav>
         </div>
     </div>
-    <div class="intro">
+    <div class="mainbody section">
         <h1>Hello World!</h1>
         <p>My name is Kavin and I am 15 years old. I am a rising sophomore at Enloe High School.</p>
-    </div>
-    <div class="mainbody">
-        
     </div>
 </body>
 
