changed navbar and projects tab
- Made navbar bold.
- Projects tab has 3 boxes.
- Split the html and css into two boxes, one for each project.

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kavin Kumanan - Projects</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/projects.css">
 </head>
 
@@ -27,30 +28,30 @@
         <h1>Projects</h1>
         <p>Here are all the projects that I have done and am doing at the moment. </p>
         <div class="grid-container">
-            <div class="CIWDv3-project psection">
-                <h2>Complete Intro to Web Development Projects</h2>
-                <p>Currently, I've been doing a course on Frontend Masters. The course is <span class="italic">Complete
-                        Intro to Web Development, v3</span> by Brian Holt. These are some projects from this course.</p>
-                <ul>
-                    <li>
-                        <p>Here's a link to my first HTML project - <a class="links" href="/for-projects-tab/CIWDv3-blog-project/blog.html">HTML project link</a>.</p>
-                        <p>This was the first project given in this course. In this project, only HTML was used to show our understanding of it.</p>
-                        <p>These are the project directions - <a class="links" href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/html/html-project" target="-blank">HTML project directions</a>.</p>
-                    </li>
-                    <li>
-                        <p>Here's a link to my CSS project - <a class="links"
-                                href="/for-projects-tab/CIWDv3-css-project.html">CSS project link</a>.</p>
-                        <p>My goal here was to copy the design of a coffee website given to me by my instructor by using
-                            completely my HTML and CSS.</p>
-                        <p>These are the project directions - <a class="links"
-                                href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/css/project"
-                                target="_blank">CSS project directions</a>.</p>
-                    </li>
-                </ul>
+            <div class="html-blog-project psection">
+                <h2 class="project-title">HTML Blog Project</h2>
+                <p>Currently, I've been doing a course on Frontend Masters. The course is <span class="italic">Complete Intro to Web Development, v3</span> by Brian Holt. This is an HTML blog project from this course.</p>
+                <p>Here's a link the HTML project - <a class="links"
+                        href="/projects-tab/html-blog-project/blog.html">HTML project link</a>.</p>
+                <p>This was the first project given in this course. In this project, only HTML was used to show our understanding of it.</p>
+                <p>These are the project directions - <a class="links"
+                        href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/html/html-project"
+                        target="-blank">HTML project directions</a>.</p>
+            </div>
+            <div class="css-project psection">
+                <h2 class="project-title">CSS Project</h2>
+                <p>This is a css project from the same course, <span class="italic">Complete Intro to Web Development, v3</span> by Brian Holt.</p>
+                <p>Here's a link to my CSS project - <a class="links" href="/projects-tab/css-project.html">CSS project
+                        link</a>.</p>
+                <p>My goal here was to copy the design of a coffee website given to me by my instructor by using completely my HTML and CSS.</p>
+                <p>These are the project directions - <a class="links"
+                        href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/css/project"
+                        target="_blank">CSS project directions</a>.</p>
             </div>
             <div class="faruk-biryani psection">
-                <h2>Faruk Biryani Project</h2>
-                <p>My dad is teaching me and some of my friends to code. A friend of my dad makes biryani and asked him to make a website. We are making this website for him.</p>
+                <h2 class="project-title">Faruk Biryani Project</h2>
+                <p>My dad is teaching me and some of my friends to code. A friend of my dad makes biryani and asked him
+                    to make a website. We are making this website for him.</p>
             </div>
         </div>
     </div>
