made navbar and projects tab responsive
- I made the navbar responsive by changing the buttons to icons.
- I also made there always be a home button on the left.
- On mobile devices the projects tab will stack instead of being side-by-side.

--- a/projects-tab/css-project.html
+++ b/projects-tab/css-project.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <div class="grid-container">
-        <div class="header">
+    <div class="header">
             <img src="/img/CIWDv3-images/coffee-logo.png" alt="coffee masters logo" class="logo">
             <h1>Coffee Masters</h1>
-        </div>
-        <div class="items section mleft">
+    </div>
+    <div class="grid-container">
+        <div class="items section">
             <!-- <div class="subtitle">
                     <h2>ITEMS</h2>
                 </div>
@@ -81,7 +81,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="name section mright">
+        <div class="name section">
             <div class="title">
                 <h2 class="lb">NAME</h2>
             </div>
@@ -91,7 +91,7 @@
             </div>
 
         </div>
-        <div class="payment section mright">
+        <div class="payment section">
             <div class="title">
                 <h2 class="lb">Payment</h2>
             </div>
