--- a/basketball.html
+++ b/basketball.html
@@ -7,16 +7,22 @@
     <title>Kavin Kumanan - Basketball</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/b85a2be528.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="header">
         <div class="nav">
             <nav>
+                <div class="back-home">
+                    <a href="index.html"><i class="fa-solid fa-house"></i></a>
+                </div>
                 <ul class="nav-list">
-                    <li class="nav-list-item"><a href="index.html">Home</a></li>
-                    <li class="nav-list-item"><a href="basketball.html">Basketball</a></li>
-                    <li class="nav-list-item"><a href="foodlife.html">Food Life</a></li>
-                    <li class="nav-list-item"><a href="projects.html">Current Projects</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="basketball.html">Basketball</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="foodlife.html">Food Life</a></li>
+                    <li class="nav-list-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+                    <li class="nav-icon"><a class="nav-link" href="basketball.html"><i class="fa-solid fa-basketball"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="foodlife.html"><i class="fa-solid fa-utensils"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="projects.html"><i class="fa-solid fa-folder"></i></a></li>
                 </ul>
             </nav>
         </div>
