changed the home-button
- Added a home next to the home button.
- Gets removed when you go to a smaller screen with media queries.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="nav">
             <nav>
                 <div class="back-home">
-                    <a href="index.html"><i class="fa-solid fa-house"></i></a>
+                    <a class="large-home" href="index.html"><i class="fa-solid fa-house"></i></a>
+                    <a class="home-word" href="index.html">Home</a>
                 </div>
                 <ul class="nav-list">
                     <li class="nav-list-item"><a class="nav-link" href="basketball.html">Basketball</a></li>
