ngl i don't even know what
-I think just a new section or smt.

--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
                     <li class="nav-list-item"><a class="nav-link" href="basketball.html">Basketball</a></li>
                     <li class="nav-list-item"><a class="nav-link" href="foodlife.html">Food Life</a></li>
                     <li class="nav-list-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
-                    <li class="nav-icon"><a class="nav-link" href="basketball.html"><i class="fa-solid fa-basketball"></i></a></li>
-                    <li class="nav-icon"><a class="nav-link" href="foodlife.html"><i class="fa-solid fa-utensils"></i></a></li>
-                    <li class="nav-icon"><a class="nav-link" href="projects.html"><i class="fa-solid fa-folder"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="basketball.html"><i
+                                class="fa-solid fa-basketball"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="foodlife.html"><i
+                                class="fa-solid fa-utensils"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="projects.html"><i class="fa-solid fa-folder"></i></a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </div>
     <div class="mainbody section">
-        <h1>Hello World!</h1>
-        <p>My name is Kavin and I am 15 years old. I am a rising sophomore at Enloe High School.</p>
+        <div class="intro">
+            <h1>Hello World!</h1>
+            <p>My name is Kavin and I am 15 years old. I am a rising sophomore at Enloe High School.</p>
+        </div>
     </div>
 </body>
 
