--- a/projects.html
+++ b/projects.html
@@ -24,33 +24,43 @@
                     <li class="nav-list-item"><a class="nav-link" href="basketball.html">Basketball</a></li>
                     <li class="nav-list-item"><a class="nav-link" href="foodlife.html">Food Life</a></li>
                     <li class="nav-list-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
-                    <li class="nav-icon"><a class="nav-link" href="basketball.html"><i class="fa-solid fa-basketball"></i></a></li>
-                    <li class="nav-icon"><a class="nav-link" href="foodlife.html"><i class="fa-solid fa-utensils"></i></a></li>
-                    <li class="nav-icon"><a class="nav-link" href="projects.html"><i class="fa-solid fa-folder"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="basketball.html"><i
+                                class="fa-solid fa-basketball"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="foodlife.html"><i
+                                class="fa-solid fa-utensils"></i></a></li>
+                    <li class="nav-icon"><a class="nav-link" href="projects.html"><i class="fa-solid fa-folder"></i></a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </div>
     <div class="mainbody section">
-        <h1>Projects</h1>
-        <p>Here are all the projects that I have done and am doing at the moment. </p>
+        <div class="intro">
+            <h1>Projects</h1>
+            <p>Here are all the projects that I have done and am doing at the moment. </p>
+        </div>
         <div class="grid-container">
             <div class="html-blog-project psection">
                 <h2 class="project-title">HTML Blog Project</h2>
-                <p>Currently, I've been doing a course on Frontend Masters. The course is <span class="italic">Complete Intro to Web Development, v3</span> by Brian Holt. This is an HTML blog project from this course.</p>
+                <p>Currently, I've been doing a course on Frontend Masters. The course is <span class="italic">Complete
+                        Intro to Web Development, v3</span> by Brian Holt. This is an HTML blog project from this
+                    course.</p>
                 <p>Here's a link the HTML project - <a class="links"
                         href="/projects-tab/html-blog-project/blog.html">HTML project link</a>.</p>
-                <p>This was the first project given in this course. In this project, only HTML was used to show our understanding of it.</p>
+                <p>This was the first project given in this course. In this project, only HTML was used to show our
+                    understanding of it.</p>
                 <p>These are the project directions - <a class="links"
                         href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/html/html-project"
                         target="-blank">HTML project directions</a>.</p>
             </div>
             <div class="css-project psection">
                 <h2 class="project-title">CSS Project</h2>
-                <p>This is a css project from the same course, <span class="italic">Complete Intro to Web Development, v3</span> by Brian Holt.</p>
+                <p>This is a css project from the same course, <span class="italic">Complete Intro to Web Development,
+                        v3</span> by Brian Holt.</p>
                 <p>Here's a link to my CSS project - <a class="links" href="/projects-tab/css-project.html">CSS project
                         link</a>.</p>
-                <p>My goal here was to copy the design of a coffee website given to me by my instructor by using completely my HTML and CSS.</p>
+                <p>My goal here was to copy the design of a coffee website given to me by my instructor by using
+                    completely my HTML and CSS.</p>
                 <p>These are the project directions - <a class="links"
                         href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/css/project"
                         target="_blank">CSS project directions</a>.</p>
@@ -59,6 +69,11 @@
                 <h2 class="project-title">Faruk Biryani Project</h2>
                 <p>My dad is teaching me and some of my friends to code. A friend of my dad makes biryani and asked him
                     to make a website. We are making this website for him.</p>
+            </div>
+            <div class="next-project psection">
+                <h2 class="project-title">Next Project</h2>
+                <p>This is the next project from the Complete Intro to Web Development Course, v3 after learning HTML,
+                    CSS, and JavaScript.</p>
             </div>
         </div>
     </div>
