--- a/basketball.html
+++ b/basketball.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,79 +8,138 @@
     <title>Kavin Kumanan - Basketball</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/basketball.css">
     <script src="https://kit.fontawesome.com/b85a2be528.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
+                <a href="index.html" class="logo-img-link">
                     <img class="logo-img" src="/img/kklogo2.png" alt="">
                 </a>
+                <a href="index.html" class="logo-name">Kavin Kumanan</a>
             </div>
             <ul class="nav-list">
                 <li class="nav-list-item">
                     <a href="index.html" class="nav-link">
                         Home
-                        <i class="fa-solid fa-house"></i>
                     </a>
                 </li>
-                <li class="nav-list-item active">
+                <li class="nav-list-item navbar-active">
                     <a href="basketball.html" class="nav-link">
                         Basketball
-                        <i class="fa-solid fa-basketball"></i>
                     </a>
                 </li>
                 <li class="nav-list-item">
                     <a href="foodlife.html" class="nav-link">
                         Food Life
-                        <i class="fa-solid fa-utensils"></i>
                     </a>
                 </li>
                 <li class="nav-list-item">
                     <a href="projects.html" class="nav-link">
                         Projects
-                        <i class="fa-solid fa-folder"></i>
                     </a>
                 </li>
             </ul>
-            <div class="hamburger" onclick="toggleNavMenu()">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="navmenu" id="navMenu">
-                <ul class="navmenu-list">
-                    <li class="menu-items">
-                        <p>Kavin Kumanan</p>
-                        <i class="fa-solid fa-x" onclick="hideNavMenu()"></i>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/index.html" class="menu-links">
-                            Home
-                            <i class="fa-solid fa-house for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items nav-active">
-                        <a href="/basketball.html" class="menu-links">
-                            Basketball
-                            <i class="fa-solid fa-basketball for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/foodlife.html" class="menu-links">
-                            Food Life
-                            <i class="fa-solid fa-utensils for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/projects.html" class="menu-links">
-                            Projects
-                            <i class="fa-solid fa-folder for-navmenu"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </nav>
     </header>
+    <div class="hamburger" onclick="toggleNavMenu()">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    <div class="navmenu" id="navMenu">
+        <ul class="navmenu-list">
+            <li class="menu-items">
+                <p>Kavin Kumanan</p>
+                <i class="fa-solid fa-x" onclick="hideNavMenu()"></i>
+            </li>
+            <li class="menu-items">
+                <a href="/index.html" class="menu-links">
+                    Home
+                    <i class="fa-solid fa-house for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items navmenu-active">
+                <a href="/basketball.html" class="menu-links">
+                    Basketball
+                    <i class="fa-solid fa-basketball for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items">
+                <a href="/foodlife.html" class="menu-links">
+                    Food Life
+                    <i class="fa-solid fa-utensils for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items">
+                <a href="/projects.html" class="menu-links">
+                    Projects
+                    <i class="fa-solid fa-folder for-navmenu"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="mainbody section">
+        <h1>My Basketball Stuff</h1>
+        <div class="bb-grid">
+            <div class="genbb-info bbsection">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti facere provident deleniti pariatur
+                    quae molestiae mollitia eligendi ullam, alias ea quos eveniet omnis quaerat quod? Dolores vero
+                    delectus cupiditate similique ea dolorum soluta, provident aperiam dolor at necessitatibus et
+                    consectetur, porro amet tempora deserunt molestias labore asperiores, assumenda eos quae recusandae
+                    iste eveniet. Corrupti nulla cupiditate a atque totam? Odit nobis corrupti magni. Atque sequi porro
+                    quis commodi, illo sit cupiditate sunt perspiciatis hic officiis quam rerum numquam voluptas et.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae omnis provident ab culpa. Voluptatum
+                    assumenda rerum incidunt nemo eveniet. Iusto amet itaque quae, aliquam consequuntur suscipit eveniet
+                    asperiores eos consequatur magni libero sapiente? Laudantium delectus eum quia tempora esse odio
+                    eius facere! Sint quaerat suscipit facilis, eveniet ex excepturi incidunt quos exercitationem
+                    aperiam accusamus dolores deleniti, nisi, mollitia omnis esse?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus iusto obcaecati quibusdam
+                    neque, esse consequatur dignissimos? Inventore voluptatibus asperiores placeat quo harum tenetur
+                    neque recusandae dolores est, et nemo impedit porro dignissimos accusamus eveniet. Architecto,
+                    eligendi impedit rem facilis fugiat alias minima et aliquid obcaecati exercitationem necessitatibus
+                    sed modi. Ipsam libero repellat saepe eaque, ipsa perspiciatis placeat nemo provident eum ducimus
+                    ratione cum consequatur ut voluptate. Quam impedit ipsum dolorum est eum deleniti asperiores aut
+                    quis modi itaque aliquam suscipit exercitationem nulla qui, magnam vero soluta? Deserunt incidunt
+                    quos excepturi eos dolorum aliquam adipisci, inventore dolor tempora, explicabo quas consequatur.
+                </p>
+            </div>
+            <div class="ckbb-info bbsection">
+                <h2>CK Academy</h2>
+                <p>Origininally CK Academy just started because during COVID me and my friends who played basketball
+                    needed somewhere to play. We started practicing a lot and playing a lot, but we wanted to play as a
+                    team. We got Coach Lamar to coach us for a long time through COVID and he helped us get so much
+                    better.</p>
+                <p>Now, we go out and play in some AAU tournaments, not in any big-time circuits, but just some
+                    tournaments. Coach Cyrus coaches us and some of us are playing for our school team. I'm also
+                    coaching a grassroots team and they are playing in U9 tournaments.</p>
+            </div>
+            <div class="enloembb-info bbsection">
+                <h2>Highschool Team</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ut sapiente asperiores natus
+                    pariatur quibusdam possimus dolorum assumenda veritatis totam, culpa voluptatibus unde dolor vero
+                    quo! Vitae dignissimos autem sequi sapiente sint! Dolore fugiat ullam quia quisquam ipsa quod
+                    aliquam, doloremque, velit ducimus sunt laboriosam rem ratione nesciunt, eaque quibusdam dolor vero
+                    officia in facere molestiae praesentium quasi accusamus. Ipsum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero inventore fuga aliquam porro debitis
+                    illum a, vitae magni saepe magnam suscipit officia voluptatum nobis quidem labore architecto
+                    praesentium! Incidunt error rem eius ad laudantium dolorem, enim illo ducimus id hic, accusamus
+                    facere asperiores est nihil numquam, iure a autem perferendis odio eos saepe corporis. Sint autem at
+                    animi sit. Consequuntur optio modi soluta sapiente ex dignissimos eius at aspernatur possimus culpa!
+                    Architecto sequi, exercitationem fuga ipsum quibusdam quod, sapiente ipsam voluptatem veritatis
+                    excepturi, adipisci quo. Id culpa, sapiente nostrum ipsa quod cupiditate, officia neque sint
+                    laudantium ut quibusdam maiores modi.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam neque perferendis impedit ad
+                    placeat officiis nisi facere at laborum laboriosam consectetur repellat, quo explicabo sapiente
+                    laudantium excepturi iure molestiae. Et quam quod facere optio consequuntur recusandae labore minima
+                    velit repudiandae, veritatis, id cupiditate modi? Perspiciatis obcaecati nihil cupiditate sequi
+                    laudantium, dolor quo tenetur numquam velit alias explicabo voluptates pariatur dicta nisi officia
+                    ipsa accusamus deleniti, doloribus fugit, fuga eos et soluta. Aperiam optio impedit corrupti
+                    accusantium. Excepturi magnam deserunt id nostrum ad tempora dicta enim.</p>
+            </div>
+        </div>
+    </div>
     <script>
         function toggleNavMenu() {
             document.getElementById('navMenu').classList.toggle('nav-is-active');
@@ -90,4 +150,5 @@
         }
     </script>
 </body>
+
 </html>
