--- a/foodlife.html
+++ b/foodlife.html
@@ -13,73 +13,70 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
+                <a href="index.html" class="logo-img-link">
                     <img class="logo-img" src="/img/kklogo2.png" alt="">
                 </a>
+                <a href="index.html" class="logo-name">Kavin Kumanan</a>
             </div>
             <ul class="nav-list">
                 <li class="nav-list-item">
                     <a href="index.html" class="nav-link">
                         Home
-                        <i class="fa-solid fa-house"></i>
                     </a>
                 </li>
                 <li class="nav-list-item">
                     <a href="basketball.html" class="nav-link">
                         Basketball
-                        <i class="fa-solid fa-basketball"></i>
                     </a>
                 </li>
-                <li class="nav-list-item active">
+                <li class="nav-list-item navbar-active">
                     <a href="foodlife.html" class="nav-link">
                         Food Life
-                        <i class="fa-solid fa-utensils"></i>
                     </a>
                 </li>
                 <li class="nav-list-item">
                     <a href="projects.html" class="nav-link">
                         Projects
-                        <i class="fa-solid fa-folder"></i>
                     </a>
                 </li>
             </ul>
-            <div class="hamburger" onclick="toggleNavMenu()">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="navmenu" id="navMenu">
-                <ul class="navmenu-list">
-                    <li class="menu-items">
-                        <p>Kavin Kumanan</p>
-                        <i class="fa-solid fa-x" onclick="hideNavMenu()"></i>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/index.html" class="menu-links">
-                            Home
-                            <i class="fa-solid fa-house for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/basketball.html" class="menu-links">
-                            Basketball
-                            <i class="fa-solid fa-basketball for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items nav-active">
-                        <a href="/foodlife.html" class="menu-links">
-                            Food Life
-                            <i class="fa-solid fa-utensils for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/projects.html" class="menu-links">
-                            Projects
-                            <i class="fa-solid fa-folder for-navmenu"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </nav>
     </header>
+    <div class="hamburger" onclick="toggleNavMenu()">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    <div class="navmenu" id="navMenu">
+        <ul class="navmenu-list">
+            <li class="menu-items">
+                <p>Kavin Kumanan</p>
+                <i class="fa-solid fa-x" onclick="hideNavMenu()"></i>
+            </li>
+            <li class="menu-items">
+                <a href="/index.html" class="menu-links">
+                    Home
+                    <i class="fa-solid fa-house for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items">
+                <a href="/basketball.html" class="menu-links">
+                    Basketball
+                    <i class="fa-solid fa-basketball for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items navmenu-active">
+                <a href="/foodlife.html" class="menu-links">
+                    Food Life
+                    <i class="fa-solid fa-utensils for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items">
+                <a href="/projects.html" class="menu-links">
+                    Projects
+                    <i class="fa-solid fa-folder for-navmenu"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
     <script>
         function toggleNavMenu() {
             document.getElementById('navMenu').classList.toggle('nav-is-active');
