--- a/projects.html
+++ b/projects.html
@@ -16,80 +16,85 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
+                <a href="index.html" class="logo-img-link">
                     <img class="logo-img" src="/img/kklogo2.png" alt="">
                 </a>
+                <a href="index.html" class="logo-name">Kavin Kumanan</a>
             </div>
             <ul class="nav-list">
                 <li class="nav-list-item">
                     <a href="index.html" class="nav-link">
                         Home
-                        <i class="fa-solid fa-house"></i>
                     </a>
                 </li>
                 <li class="nav-list-item">
                     <a href="basketball.html" class="nav-link">
                         Basketball
-                        <i class="fa-solid fa-basketball"></i>
                     </a>
                 </li>
                 <li class="nav-list-item">
                     <a href="foodlife.html" class="nav-link">
                         Food Life
-                        <i class="fa-solid fa-utensils"></i>
                     </a>
                 </li>
-                <li class="nav-list-item active">
+                <li class="nav-list-item navbar-active">
                     <a href="projects.html" class="nav-link">
                         Projects
-                        <i class="fa-solid fa-folder"></i>
                     </a>
                 </li>
             </ul>
-            <div class="hamburger" onclick="toggleNavMenu()">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="navmenu" id="navMenu">
-                <ul class="navmenu-list">
-                    <li class="menu-items">
-                        <p>Kavin Kumanan</p>
-                        <i class="fa-solid fa-x" onclick="hideNavMenu()"></i>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/index.html" class="menu-links">
-                            Home
-                            <i class="fa-solid fa-house for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/basketball.html" class="menu-links">
-                            Basketball
-                            <i class="fa-solid fa-basketball for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items">
-                        <a href="/foodlife.html" class="menu-links">
-                            Food Life
-                            <i class="fa-solid fa-utensils for-navmenu"></i>
-                        </a>
-                    </li>
-                    <li class="menu-items nav-active">
-                        <a href="/projects.html" class="menu-links">
-                            Projects
-                            <i class="fa-solid fa-folder for-navmenu"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </nav>
     </header>
+    <div class="hamburger" onclick="toggleNavMenu()">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    <div class="navmenu" id="navMenu">
+        <ul class="navmenu-list">
+            <li class="menu-items">
+                <p>Kavin Kumanan</p>
+                <i class="fa-solid fa-x" onclick="hideNavMenu()"></i>
+            </li>
+            <li class="menu-items">
+                <a href="/index.html" class="menu-links">
+                    Home
+                    <i class="fa-solid fa-house for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items">
+                <a href="/basketball.html" class="menu-links">
+                    Basketball
+                    <i class="fa-solid fa-basketball for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items">
+                <a href="/foodlife.html" class="menu-links">
+                    Food Life
+                    <i class="fa-solid fa-utensils for-navmenu"></i>
+                </a>
+            </li>
+            <li class="menu-items navmenu-active">
+                <a href="/projects.html" class="menu-links">
+                    Projects
+                    <i class="fa-solid fa-folder for-navmenu"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
     <div class="mainbody section">
         <div class="intro">
             <h1>Projects</h1>
             <p>Here are all the projects that I have done and am doing at the moment. </p>
         </div>
-        <div class="grid-container">
-            <div class="html-blog-project psection">
+        <div class="project-tabs">
+            <ul class="projects-list">
+                <li class="projects-list-item"><a href="#html-blog-project" class="project-link">HTML</a></li>
+                <li class="projects-list-item"><a href="#css-project" class="project-link">CSS</a></li>
+                <li class="projects-list-item"><a href="#faruk-biryani" class="project-link">Faruk Biryani</a></li>
+                <li class="projects-list-item"><a href="#next-project" class="project-link">Next Project</a></li>
+            </ul>
+        </div>
+        <div class="projects-grid">
+            <div class="html-blog-project psection" id="html-blog-project">
                 <h2 class="project-title">HTML Blog Project</h2>
                 <p>Currently, I've been doing a course on Frontend Masters. The course is <span class="italic">Complete
                         Intro to Web Development, v3</span> by Brian Holt. This is an HTML blog project from this
@@ -102,7 +107,7 @@
                         href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/html/html-project"
                         target="-blank">HTML project directions</a>.</p>
             </div>
-            <div class="css-project psection">
+            <div class="css-project psection" id="css-project">
                 <h2 class="project-title">CSS Project</h2>
                 <p>This is a css project from the same course, <span class="italic">Complete Intro to Web Development,
                         v3</span> by Brian Holt.</p>
@@ -114,12 +119,12 @@
                         href="https://btholt.github.io/complete-intro-to-web-dev-v3/lessons/css/project"
                         target="_blank">CSS project directions</a>.</p>
             </div>
-            <div class="faruk-biryani psection">
+            <div class="faruk-biryani psection" id="faruk-biryani">
                 <h2 class="project-title">Faruk Biryani Project</h2>
                 <p>My dad is teaching me and some of my friends to code. A friend of my dad makes biryani and asked him
                     to make a website. We are making this website for him.</p>
             </div>
-            <div class="next-project psection">
+            <div class="next-project psection" id="next-project">
                 <h2 class="project-title">Next Project</h2>
                 <p>This is the next project from the Complete Intro to Web Development Course, v3 after learning HTML,
                     CSS, and JavaScript.</p>
